# oxideav-aacs

./: CHANGELOG.md  Cargo.toml  README.md
src/: aes.rs  ake.rs  cht.rs  content.rs  ec.rs  ecdsa.rs  error.rs  keydb.rs  lib.rs  mkb.rs  mmc.rs  subdiff.rs  unit_key.rs  volume.rs  vuk.rs
tests/: synth_cht.rs  synth_phaseb_mmc.rs  synth_phasec_ake.rs  synth_phased_kcd.rs  synth_round1_content.rs  synth_round1_keydb.rs  synth_round1_mkb.rs  synth_round1_mkb_sig.rs  synth_round1_subdiff.rs  synth_round1_unit_key.rs  synth_round1_volume.rs  synth_round2_cht.rs
